--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoDatos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.1.4.jar=D:\\ULIMA\\7mo ciclo\\Inge de Datos\\Trabjao\\jcalendar-1.1.4.jar
+file.reference.jcalendar-1.4.jar=D:\\ULIMA\\7mo ciclo\\Inge de Datos\\Trabjao\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
